[package]
name = "tln_command"
version = "0.1.0"
edition = "2021"

[lib]
name = "tln_command"
crate-type = ["cdylib"]

[dependencies]
# color console
anstream = "0.6.15"
owo-colors = "4.1.0"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

crossbeam-channel = "0.5.13"

common = { path = "../common" }
